{
    "name": "AsteroidsActions",
    "maps": [
        {
            "name": "Player1",
            "id": "1fb86dfc-0062-4e6c-a38e-1e64bf4d22d4",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "1ba11d70-ee60-417e-892f-700cbfb102ef",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Impulse",
                    "type": "Button",
                    "id": "4c144ac7-9f55-42e5-85d9-5b7cd3eb8f49",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "c4bb210c-9718-4aa1-8f19-ca18f8cbd930",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hyperspace",
                    "type": "Button",
                    "id": "dee263e3-e902-476f-8b53-cf636e80b3b2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "07ec94f1-8310-4c23-a002-813ef053b3b3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "cea52d27-b7de-4230-9821-b7931263cd3c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "e44515eb-1276-438d-884a-7f37ed5a73ac",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9c8065fb-8a46-48e9-a169-a64621793ab0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Impulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "731d1f24-7dd0-474b-a401-0d43e66c0227",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0f1a438f-dd29-4f75-b399-ffe9666627e2",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hyperspace",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2",
            "id": "9a417031-f3d7-49d9-83a7-1da842cdb070",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Button",
                    "id": "670aec72-291c-4f3b-9bf7-4c46b3089209",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Impulse",
                    "type": "Button",
                    "id": "8bb5e524-1b50-48b0-a8ea-af012360f8a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "2e4ec743-e648-4dcf-9a2e-38d20ceb497c",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Hyperspace",
                    "type": "Button",
                    "id": "1dcdd8d7-11cd-412c-95ca-43e6d1ac42aa",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29385f19-5878-4416-a187-3513e675982b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Impulse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b257c13-5bfb-4205-96e4-215abd23a415",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3f1aabb5-f603-4493-af94-b35a85f0c377",
                    "path": "<Keyboard>/rightShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Hyperspace",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "2b07ba59-ac24-43ba-ba7d-ef41d2b22972",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d4020a3f-49a8-447a-ba7e-65514a0400c0",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "74d11e0b-c37f-4e20-9a6e-95d384325dfb",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Game",
            "id": "c56767a5-8e27-49ad-b921-6fecacbe8d38",
            "actions": [
                {
                    "name": "Player1Start",
                    "type": "Button",
                    "id": "c92345c9-e032-4354-8bc9-03aeb89b109f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Player2Start",
                    "type": "Button",
                    "id": "c9946c14-3f05-4fa3-ba65-b1735f29f4af",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c9ff7c15-6d37-4ec6-8f4c-adaebe0aed14",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player1Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c8f8c84f-3ed2-4ac4-b772-961ba732635c",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Player2Start",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "End",
            "id": "e14a1ba9-deb7-4bba-84b2-845fd90026fd",
            "actions": [
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "be9cade7-b681-4090-8c0f-17c614833880",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af438ef9-4e09-4c2a-a0d0-18f17c5a871d",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}